changed class name

--- a/css/style.css
+++ b/css/style.css
@@ -60,18 +60,8 @@ header .contact-form {
 	margin-bottom: 156px;
 }
 
-header .textarea-top {
+header .contact-form .textarea {
 	color: rgba(255,255,255,0.5);
-	--textarea-width: calc(200px + 9%);
-	width: calc(100% - var(--textarea-width));
-	height:44px;
-	font: 18px/22px Montserrat, sans-serif;
-	outline: none;
-	position: absolute;
-	left: 3%;
-	top: 49px;
-	resize: none;
-	overflow: auto;
 	background: #000;
 }
 
@@ -248,6 +238,7 @@ header .contact-form {
 	resize: none;
 	overflow: auto;
 	resize: none;
+	border: none;
 }
 
 .contact-form label {
@@ -261,11 +252,11 @@ header .contact-form {
 	pointer-events: none;
 	transition: all 0.2s ease-in-out;
 	z-index: 3;
+	vertical-align: middle;
+
 }
 
-.contact-form label {
-	vertical-align: middle;
-}
+
 
 .contact-form textarea:focus + label, .contact-form textarea:valid + label {
 	transform: translatey(-28px);
@@ -502,7 +493,7 @@ header .contact-form {
 	margin-bottom: 156px;
 }
 
-header .textarea-top {
+header .contact-form .textarea {
 	color: rgba(255,255,255,0.5);
 	font: 18px/1 Montserrat, sans-serif;
 	outline: none;
