--- a/css/style.css
+++ b/css/style.css
@@ -28,13 +28,18 @@ header {
 
 .burger-logo-container{
 	display: flex;
+	align-items: center;
 }
 
 .logo {
-	width: 100px;
-  	height: 60px;
+	
   	display: block;
   	margin: 0 auto 80px;
+}
+
+.logo-img{
+	width: 100px;
+  	height: 60px;
 }
 .nav {
 	list-style: none;
@@ -118,9 +123,7 @@ header .contact-form {
 }
 
 .slick-slider img {
- 	margin: 0 auto;
-	width: 400px !important;
-	height:200px !important;
+ 	
 }
 
 
@@ -141,7 +144,8 @@ header .contact-form {
 	text-align: center;
 	border-bottom: 1px solid #000;
 	border-top: 1px solid #000;
-	padding: 16px 0 14px;
+	padding: 16px 0;
+	margin: 0 0 60px;
 	
 }
 
@@ -158,13 +162,13 @@ header .contact-form {
 .text .mark {
 	background-color: inherit;
 	font-size: 48px;
-	line-height: 52px;
+	
 }
 
 .article-container{
 	display: flex;
 	justify-content: space-between;
-	padding: 60px 0 0;
+	/*padding: 60px 0 0;*/
 }
 .text-container {
     flex-basis: 500px;
@@ -188,7 +192,7 @@ header .contact-form {
 }
 
 .footer .title{
-	margin-bottom: 47px;
+	margin: 0 0 47px;
 }
 
 .contact-form{
@@ -239,7 +243,7 @@ header .contact-form {
 /* tablet */
 
 @media only screen
-and (min-width: 601px)
+and (min-width: 768px)
 and (max-width: 1024px) {
 	.wrapper {
 		padding: 204px 48px 0;
@@ -313,44 +317,217 @@ and (max-width: 1024px) {
    }
 
     .main-section{
-    	padding: 49px 0 47px;
+    	padding: 49px 52px 47px;
+    	/*max-width: 824;
+    	margin: 0 auto;*/
     }
 
     .main-section .text{
     	font-size: 20px;
+    	line-height: 26px;
     }
 	.article-container{
-		padding: 32px 0 32px;
+		padding: 0;
 		display: block;
 	}
 	.title{
 		font-size: 28px;
+		line-height: 34px;
+		margin-bottom: 32px;
 	}
 
-	.history-section .text:first-child {
+	.footer .title {
+    margin: 0 0 32px;
+}
+
+	/*.history-section .text:first-child {
     margin-right: 0;
     padding: 48px;
-}
+}*/
+	.history-section {
+		padding: 0 0 32px;
+	}
 	.history-section .text{
-		padding: 48px;
+		    padding: 48px;
 	}
 
-	.text + .text{
+	.text-container + .text-container{
 		margin-top: 32px;
 	}
+	
+	
+}
+
+/* 415-767 */
+
+
+@media only screen
+and (min-width: 415px)
+and (max-width: 767px) {
+	.wrapper {
+		padding: 204px 48px 0;
+		/*max-width: 928px;*/
+	}
+	header {
+		position: absolute;
+		top: 0;
+		left: 0;
+	    width: 100%;
+	    z-index: 1;
+	    padding: 48px 48px 96px;
+	}
+	.logo{
+		margin: 0 auto;
+	}
+
+	.logo-img{
+		width: 80px;
+		height: 48px;
+	}
+	.nav {
+		display: none;
+	}
+	
+	.burger-menu {
+		display: block;
+	}
+	.container{
+		max-width: 928px;
+	}
+
+	/*-----menu-open-styles-------*/
+	.menu-open header {
+		background: #000;
+		height: 600px;
+	}
+
+	.menu-open header .nav{
+		display: block;
+	}
+
+	.menu-open .logo * {
+		fill: #fff;
+	}
+	.menu-open .burger-menu-line,
+	.menu-open .burger-menu-line:before  {
+		background: #fff;
+	}
+	.menu-open .burger-menu-line:after {
+		display: none;
+	}
+	.menu-open header .contact-form {
+		display: block;
+		
+	}
+
+	.menu-open header .contact-form textarea{
+		background-color: transparent;
+		border: 1px solid #fff;
+	}
+
+	.menu-open header .contact-form textarea::placeholder{
+		color: #fff;
+	}
+
+	.menu-open header .contact-form button {
+	background: #fff;
+    color: #000;
+
+   }
+
+	.slick-slider img{
+		margin: 0 auto;
+
+	}
+
+	.slick-dots{
+		padding: 24px 0 0;
+	}
+	.slick-dots button {
+    width: 8px;
+    height: 8px;
+   }
+
+
+   .main-section{
+   	padding: 24px 0;
+   }
+   .main-section .text{
+   	font-size: 16px;
+   	padding: 0;
+   	line-height: 20px;
+   }	
+
+   
+   .article-container{
+		padding: 0 0 24px;
+		display: block;
+	}
+
+	.history-section {
+    padding: 0;
+}
+	.history-section .text:first-child {
+    margin-right: 0;
+    padding: 20px;
+}
+	.history-section .text{
+		padding: 20px;
+		font-size: 16px;
+	}
+
+	.text-container + .text-container{
+		margin-top: 24px;
+	}
+
 	.title{
+		font-size: 20px;
 		line-height: normal;
+		margin: 0 0 24px;
+	}
+
+	.footer .title{
+		margin: 0 0 24px;
+	}
+
+	.footer .contact-form{
+		display: block;
+	}
+
+	.footer .contact-form button {
+     position: static; 
+    width: 100%;
+     transform: none;
+     font-size: 24px;
+     line-height: normal;
 	}
 	.footer .title {
-    margin-bottom: 32px;
+	    margin-bottom: 24px;
+	}
+
+	.contact-form textarea{
+		margin-bottom: 19px;
+		height: 150px;
+		padding: 20px 20px 0 20px;
+	}
+
+	
+
+	.text .mark {    
+	    font-size: 24px;
+	    line-height: normal;
+	    display: block;
+
+
 }
 }
 
 /* mobile */
 
+
 @media only screen
 and (min-width: 0)
-and (max-width: 600px) {
+and (max-width: 415px) {
 	.wrapper{
 		max-width: 600px;
 	}
@@ -392,8 +569,7 @@ and (max-width: 600px) {
 	}
 
 	.slick-slider img{
-		height: 180px !important;
-		width: 100% !important;
+		width: 100%;
 	}
 	.slick-dots{
 		padding: 24px 0 0;
@@ -408,6 +584,7 @@ and (max-width: 600px) {
    .main-section .text{
    	font-size: 16px;
    	padding: 0;
+   	line-height: 20px;
    }	
 
    .container{
@@ -415,9 +592,13 @@ and (max-width: 600px) {
    }
 
    .article-container{
-		padding: 24px 0 24px;
+		padding: 0 0 24px;
 		display: block;
 	}
+
+	.history-section {
+    padding: 0;
+}
 	.history-section .text:first-child {
     margin-right: 0;
     padding: 20px;
@@ -427,13 +608,18 @@ and (max-width: 600px) {
 		font-size: 16px;
 	}
 
-	.text + .text{
+	.text-container + .text-container{
 		margin-top: 24px;
 	}
 
 	.title{
-		font-size: 18px;
+		font-size: 20px;
 		line-height: normal;
+		margin: 0 0 24px;
+	}
+
+	.footer .title{
+		margin: 0 0 24px;
 	}
 
 	.footer .contact-form{
@@ -466,4 +652,3 @@ and (max-width: 600px) {
 
 
 }
-
