--- a/css/style.css
+++ b/css/style.css
@@ -245,6 +245,9 @@ header .contact-form {
 @media only screen
 and (min-width: 768px)
 and (max-width: 1024px) {
+	body{
+		max-width: 1024px;
+	}
 	.wrapper {
 		padding: 204px 48px 0;
 		/*max-width: 928px;*/
@@ -363,7 +366,7 @@ and (max-width: 1024px) {
 
 @media only screen
 and (min-width: 415px)
-and (max-width: 767px) {
+and (max-width: 768px) {
 	.wrapper {
 		padding: 204px 48px 0;
 		/*max-width: 928px;*/
