--- a/css/style.css
+++ b/css/style.css
@@ -94,6 +94,33 @@ header .contact-form {
 	display: none;
 }
 
+/*-------------header-contact-form----------*/
+
+header .contact-form {
+	border-color: #fff;
+	margin-bottom: 156px;
+}
+
+header .contact-form .textarea {
+	color: rgba(255,255,255,0.5);
+	background: #000;
+}
+
+header .contact-form label {
+	color: rgba(255,255,255,0.5);
+}
+
+header .contact-form-button {
+	background: #fff;
+	color: #000;
+}
+
+header .contact-form-button:hover {
+	box-shadow: 0px 0px 34px 0px rgba(255,255,255,0.6);
+	transform: scale(1.1);
+}
+/*-------------contact-form----------*/
+
 /*-------------burger-menu------------*/
 
 /*------------carousel-------------------*/
@@ -191,43 +218,71 @@ header .contact-form {
 	margin: 0 0 47px;
 }
 
-.contact-form{
-	position: relative;	
-}
-
-.contact-form button {
-	padding: 13px 59px;
-    background: #000;
-    font-size: 28px;
-    line-height: 34px;
-    color: #fff;
-    border-radius: 8px;
-    position: absolute;
-    top: 50%;
-    right: 30px;
-    text-transform: uppercase;
-    transform: translateY(-50%);
-    font-family: Montserrat, sans-serif;
-}
-
-.contact-form textarea::placeholder {
-	font-size: 18px;
-	line-height: 1;
-	color: #000;
-	opacity: 0.5;
-	position: absolute;
-	top: 10px;
-	font-family: "Montserrat", sans-serif;
-	display: inline-block;
-}
-
-.contact-form textarea {
+.contact-form {
+	max-width: 100%;
+	height: 120px;
+	font-size: 16px;
+	position: relative;
+	margin-bottom: 100px;
+	outline: none;
 	border: 1px solid #000;
-    background: #FFF;
-    width: 100%;
-    resize: none;
-    padding: 49px 30px;
-    font-size: 18px;
+}
+
+.contact-form .textarea {
+	--textarea-width: calc(200px + 9%);
+	width: calc(100% - var(--textarea-width));
+	height:44px;
+	font: 18px/ 1 Montserrat, sans-serif;
+	color: rgba(0,0,0,0.5);
+	outline: none;
+	position: absolute;
+	left: 3%;
+	top: 49px;
+	resize: none;
+	overflow: auto;
+	resize: none;
+	border: none;
+}
+
+.contact-form label {
+	position: absolute;
+	width: 100%;
+	height: 60%;
+	left: 3%;
+	top: 49px;
+	font: 18px/ 22px Montserrat, sans-serif;
+	color: rgba(0, 0, 0, 0.5);
+	pointer-events: none;
+	transition: all 0.2s ease-in-out;
+	z-index: 3;
+	vertical-align: middle;
+
+}
+
+
+
+.contact-form textarea:focus + label, .contact-form textarea:valid + label {
+	transform: translatey(-28px);
+ }
+
+.contact-form-button {
+	font: 28px/ 34px 'Montserrat', sans-serif;
+	color: #fff;
+	text-transform: uppercase;
+	padding: 13px 59px;
+	background: #000;
+	border-radius: 8px;
+	position: absolute;
+	z-index: 3;
+	right: 2.9%;
+	top: 25%;
+	cursor: pointer;
+	transition: all 0.2s ease-in-out;
+}
+
+.contact-form-button:hover {
+	box-shadow: 0px 0px 34px 0px rgba(0,0,0,0.46);
+	transform: scale(1.1);
 }
 
 /*-------------contact-form----------*/
@@ -330,6 +385,12 @@ header .contact-form {
 	.footer .title {
     margin: 0 0 32px;
 }
+
+/*-------------footer-contact-form----------*/
+footer .contact-form {
+	margin-bottom: 80px;
+}
+/*-------------contact-form----------*/
 
 	.history-section {
 		padding: 0 0 32px;
@@ -443,35 +504,73 @@ and (max-width: 768px) {
 		margin-bottom: 24px;
 	}
 
-
-	.footer .contact-form{
-		display: block;
-	}
-
-	.footer .contact-form button {
-	    position: static; 
-	    width: 100%;
-	    transform: none;
-	    font-size: 24px;
-	    line-height: normal;
-	}
-	.footer .title {
-	    margin-bottom: 24px;
-	}
-
-	.contact-form textarea{
-		margin-bottom: 19px;
-		height: 150px;
-		padding: 20px 20px 0 20px;
-	}
-
-	
-
 	.text .mark {    
 	    font-size: 24px;
 	    line-height: normal;
 	    display: block;
 	}
+	/*-------------contact-form----------*/
+/*-------------header-contact-form----------*/
+header .contact-form {
+	border-color: #fff;
+	margin-bottom: 156px;
+}
+
+header .contact-form .textarea {
+	color: rgba(255,255,255,0.5);
+	font: 18px/1 Montserrat, sans-serif;
+	outline: none;
+	resize: none;
+	overflow: auto;
+	background: #000;
+	padding: 20px;
+	width: 100%;
+	height: 100%;
+	position: initial;	
+}
+
+header .contact-form label {
+	color: rgba(255,255,255,0.5);
+}
+
+header .contact-form-button {
+	background: #fff;
+	color: #000;
+	margin: 19px 0 60px;
+}
+/*-------------footer-contact-form----------*/
+.contact-form {
+	margin: 0;
+}
+.contact-form-button {
+	position: initial;
+	width: 100%;
+	margin: 19px 0 50px;
+	}
+
+.contact-form-button:hover {
+	box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.46);
+	transform: scale(1.05);
+}
+.contact-form .textarea {
+	padding: 20px;
+	width: 100%;
+	height: 100%;
+	position: initial;
+	font: 18px/1 Montserrat, sans-serif;
+
+}
+
+.contact-form label {
+	text-align: center;
+	top: 20px;
+	left: 0;
+}
+
+.contact-form textarea:focus + label, .contact-form textarea:valid + label {
+	color: rgba(0,0,0,0);
+ }
+ /*-------------contact-form----------*/
 }
 
 /* mobile */
@@ -526,4 +625,67 @@ and (max-width: 768px) {
    	margin: 0 20px;
    }	
 
+/*-------------contact-form----------*/
+/*-------------header-contact-form----------*/
+header .contact-form {
+	border-color: #fff;
+	margin-bottom: 156px;
+}
+
+header .contact-form .textarea {
+	color: rgba(255,255,255,0.5);
+	font: 18px/1 Montserrat, sans-serif;
+	outline: none;
+	resize: none;
+	overflow: auto;
+	background: #000;
+	padding: 20px;
+	width: 100%;
+	height: 100%;
+	position: initial;	
+}
+
+header .contact-form label {
+	color: rgba(255,255,255,0.5);
+}
+
+header .contact-form-button {
+	background: #fff;
+	color: #000;
+	margin: 19px 0 60px;
+}
+/*-------------footer-contact-form----------*/
+.contact-form {
+	margin: 0;
+}
+.contact-form-button {
+	position: initial;
+	width: 100%;
+	margin: 19px 0 50px;
+	}
+
+.contact-form-button:hover {
+	box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.46);
+	transform: scale(1.05);
+}
+.contact-form .textarea {
+	padding: 20px;
+	width: 100%;
+	height: 100%;
+	position: initial;
+	font: 18px/1 Montserrat, sans-serif;
+
+}
+
+.contact-form label {
+	text-align: center;
+	top: 20px;
+	left: 0;
+}
+
+.contact-form textarea:focus + label, .contact-form textarea:valid + label {
+	color: rgba(0,0,0,0);
+ }
+ /*-------------contact-form----------*/
+}
 }
