--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,7 @@ header .contact-form-button:hover {
 	padding:40px 0;
 }
 .slick-dots button{
+.slick-dots button {
 	background: #fff;
 	border-radius: 50%;
 	border: 1px solid #000;
@@ -147,7 +148,9 @@ header .contact-form-button:hover {
 .slick-dots .slick-active button {
 	background: #000;
 }
-
+.slick-slider div {
+	outline: none;
+}
 .slick-slider img {	
 	margin: 0 auto;
 	width: 400px;
@@ -460,8 +463,6 @@ and (max-width: 768px) {
 
    /*--------------menu-open styles-----------------*/
 	
-
-	
 	.slick-slider img {
 		width: 100%;
 		height: 180px; 
@@ -494,7 +495,7 @@ and (max-width: 768px) {
 
 	.history-section {
     padding: 0;
-}
+	}
 	
 	.history-section .text{
 		padding: 20px;
@@ -515,6 +516,9 @@ and (max-width: 768px) {
 	    font-size: 24px;
 	    line-height: normal;
 	    display: block;
+	   font-size: 24px;
+	   line-height: normal;
+	   display: block;
 	}
 	/*-------------contact-form----------*/
 /*-------------header-contact-form----------*/
@@ -633,12 +637,12 @@ header .contact-form-button {
    }	
 
 /*-------------contact-form----------*/
+
 /*-------------header-contact-form----------*/
 header .contact-form {
 	border-color: #fff;
 	margin-bottom: 156px;
 }
-
 header .contact-form .textarea {
 	color: rgba(255,255,255,0.5);
 	font: 18px/1 Montserrat, sans-serif;
@@ -651,11 +655,9 @@ header .contact-form .textarea {
 	height: 100%;
 	position: initial;	
 }
-
 header .contact-form label {
 	color: rgba(255,255,255,0.5);
 }
-
 header .contact-form-button {
 	background: #fff;
 	color: #000;
@@ -670,7 +672,6 @@ header .contact-form-button {
 	width: 100%;
 	margin: 19px 0 50px;
 	}
-
 .contact-form-button:hover {
 	box-shadow: 0px 0px 20px 0px rgba(0,0,0,0.46);
 	transform: scale(1.05);
@@ -681,7 +682,6 @@ header .contact-form-button {
 	height: 100%;
 	position: initial;
 	font: 18px/1 Montserrat, sans-serif;
-
 }
 
 .contact-form label {
@@ -689,10 +689,8 @@ header .contact-form-button {
 	top: 20px;
 	left: 0;
 }
-
 .contact-form textarea:focus + label, .contact-form textarea:valid + label {
 	color: rgba(0,0,0,0);
  }
  /*-------------contact-form----------*/
-}
 }
